# JDGOnline

./: CMakeLists.txt
data/: JDGO
data/cards/: cards.vili  listcard.txt
data/decks/: blabla.vili
extlibs/include/vili/vili/: BaseAttribute.hpp
include/: Card.hpp  CardContre.hpp  CardEffet.hpp  CardEquipement.hpp  CardHandler.hpp  CardInvocation.hpp  CardManager.hpp  CardTerrain.hpp  Deck.hpp  Functions.hpp  Player.hpp  main.hpp  test.hpp
src/: Card.cpp  CardContre.cpp  CardEffet.cpp  CardEquipement.cpp  CardHandler.cpp  CardInvocation.cpp  CardManager.cpp  CardTerrain.cpp  Deck.cpp  Functions.cpp  Player.cpp  main.cpp
